:recycle:Refactor: 채팅 생성, 수정 시간 구현